# CCF-MAP

./: .buildinfo  .gitignore  README.html  README.md  _config.yml  _toc.yml  genindex.html  index.md  intro.html  main.py  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: deploy-book.yml
_build/.doctrees/: README.doctree  environment.pickle  intro.doctree
_build/.doctrees/notebooks/: getting_started.doctree
_build/html/: .buildinfo  genindex.html  intro.html  objects.inv  search.html  searchindex.js
_build/html/_sources/: README.md
_build/html/_sources/notebooks/: getting_started.ipynb
_build/html/notebooks/: getting_started.html
_build/jupyter_execute/notebooks/: getting_started.ipynb
_static/: CCFv3_2020_terminology.html  HOMBA.csv  HOMBA.html  HOMBA.json  HOMBA_ontology_v1.html  HOMBA_v1.1.0.csv  HOMBA_v1.1.0.html  HOMBA_v1.1.0.json  HOMBA_v1_WORKING.csv  HOMBA_v1_ontology.json
descriptions/: cyno_macaque_ccf.md  human_BG_ccf.md  human_ccf.md  macaque_ccf.md  marmoset_ccf.md  mouse_ccf.md  rhesus_macaque_ccf.md
docs/: Atlas_organization.md  CCFv3_2020_terminology.md  HOMBA_ontology_v1.md  neuroglancer_primer.md
docs/_static/: HOMBA_ontology_v1.html
notebooks/: getting_started.html  getting_started.ipynb  working_with_annotation_volume.ipynb
notebooks/.ipynb_checkpoints/: getting_started-checkpoint.ipynb
notebooks/data/: example_coordinates.csv
src/annotation/: file_io.py
src/atlas_utils/: annotation.py  atlas_import.py
src/ccf_map.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/utils/: AtlasManifest.py  annotation.py  atlas_import.py  file_io.py  notebook_helper.py
