[project]
name = "ccf-map"
version = "0.1.0"
description = "Common Coordinate Framework Multispecies Atlas Primer"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "boto3>=1.40.27",
    "cloudpathlib>=0.21.1",
    "numpy>=2",
    "pandas>=2.2",
    "simpleitk>=2.2",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "nbformat>=5.9",
    "nbconvert>=7.10",
    "ipywidgets>=8.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter-book>=1.0",
]


[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["utils*"]  

[tool.setuptools.data-files]
"share/ccf_map/notebooks" = ["notebooks/*.ipynb"]
